fixed layout bugs on parallax

--- a/src/styles/_shophome.scss
+++ b/src/styles/_shophome.scss
@@ -1,71 +1,3 @@
-.shop-home-container {
-	height: 80vh;
-	width: 100%;
-	display: flex;
-}
-.dark {
-	.shop-home-container {
-		background: #292929;
-		color: white;
-	}
-}
-.shop-items-container {
-	width: 100vw;
-	height: 100%;
-}
-.shop-item {
-	width: 100%;
-	height: 100%;
-	display: flex;
-}
-
-.shop-item-odd {
-	width: 100%;
-	height: 100%;
-	display: flex;
-}
-
-.shop-item,
-.shop-item-odd {
-	flex-direction: column;
-	img {
-		width: 100%;
-		height: 50%;
-		object-fit: cover;
-	}
-}
-
-.shop-item-odd-text,
-.shop-item-text {
-	height: 50%;
-	width: auto;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: center;
-	text-align: center;
-	padding: 0rem 1.5rem;
-	button {
-		padding: 1rem 2rem;
-		background: black;
-		font-size: 1.4rem;
-	}
-}
-
-@media (max-width: 550px) {
-	.shop-home-container {
-		height: fit-content;
-		flex-direction: column;
-	}
-	.shop-item-odd {
-		flex-direction: column-reverse;
-	}
-	.shop-item-odd-text,
-	.shop-item-text {
-		height: 300px;
-	}
-}
-
 //parallax
 
 .main-and-text1 {
@@ -125,6 +57,12 @@
 			background: black;
 			color: white;
 		}
+	}
+}
+
+.section {
+	h2 {
+		letter-spacing: 10px;
 	}
 }
 
@@ -213,6 +151,6 @@
 		background-position: 70%;
 	}
 	.pimg4 {
-		background-position: 20%;
+		background-position: 30%;
 	}
 }
